Add convenience converter from comma-delimited string to array

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     { "HashToObject": "./graphs/HashToObject.fbp"
     , "PacketsToString": "./graphs/PacketsToString.fbp"
     , "StringToArray": "./graphs/StringToArray.fbp"
+    , "TupleToArray": "./graphs/TupleToArray.fbp"
     }
   }
 , "scripts":
