--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   , "url": "git://github.com/kenhkan/noflo-adapters"
   }
 , "dependencies":
-  { "noflo": "0.3.x"
+  { "noflo": "https://github.com/kenhkan/noflo/tarball/master"
   , "underscore": "1.4.x"
   , "underscore.string": "2.3.x"
   , "owl-deepcopy": "0.0.x"
