Convert tuple to packets

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   , "format"
   ]
 , "author": "Kenneth Kan <kenhkan@gmail.com>"
-, "version": "0.0.3"
+, "version": "0.0.4"
 , "licenses":
   [ { "type": "MIT"
     , "url": "https://github.com/kenhkan/noflo-adapters/blob/master/LICENSE.md"
@@ -45,6 +45,7 @@
     , "PacketsToString": "./graphs/PacketsToString.fbp"
     , "StringToArray": "./graphs/StringToArray.fbp"
     , "TupleToArray": "./graphs/TupleToArray.fbp"
+    , "TupleToPackets": "./graphs/TupleToPackets.fbp"
     }
   }
 , "scripts":
