--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "owl-deepcopy": "0.0.2"
   },
   "devDependencies": {
+    "grunt-exec": "~0.4.2",
+    "noflo-test": "~0.0.4",
     "coffeelint": "*",
     "coffee-script": "1.4.x",
     "grunt": "~0.4.1",
