--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "grunt": "0.4.5",
     "grunt-contrib-coffee": "~1.0.0",
     "grunt-coffeelint": "~0.0.15",
-    "grunt-cafe-mocha": "0.1.13",
     "chai": "~3.5.0",
     "mocha": "~2.5.3",
     "grunt-mocha-phantomjs": "~3.0.0",
+    "grunt-mocha-test": "^0.12.7",
     "grunt-contrib-uglify": "~1.0.1",
     "grunt-contrib-watch": "~1.0.0",
     "grunt-contrib-watch": "0.3.1",
