--- a/package.json
+++ b/package.json
@@ -20,23 +20,23 @@
   "license": "MIT",
   "dependencies": {
     "noflo": "~0.5.22",
-    "underscore": "1.8.3",
-    "owl-deepcopy": "0.0.2"
+    "underscore": "~1.8.3",
+    "owl-deepcopy": "~0.0.2"
   },
   "devDependencies": {
-    "coffee-script": "1.10.0",
-    "grunt": "0.4.5",
-    "grunt-contrib-coffee": "~1.0.0",
-    "grunt-coffeelint": "~0.0.15",
-    "chai": "~3.5.0",
-    "mocha": "~2.5.3",
-    "grunt-mocha-phantomjs": "~3.0.0",
+    "coffee-script": "^1.10.0",
+    "grunt": "^0.4.5",
+    "grunt-contrib-coffee": "^1.0.0",
+    "grunt-coffeelint": "^0.0.15",
+    "chai": "^3.5.0",
+    "mocha": "^2.5.3",
+    "grunt-mocha-phantomjs": "^3.0.0",
     "grunt-mocha-test": "^0.12.7",
-    "grunt-contrib-uglify": "~1.0.1",
-    "grunt-contrib-watch": "~1.0.0",
-    "grunt-contrib-watch": "0.3.1",
-    "grunt-noflo-manifest": "0.1.11",
-    "grunt-noflo-browser": "0.1.11"
+    "grunt-contrib-uglify": "^1.0.1",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-contrib-watch": "^0.3.1",
+    "grunt-noflo-manifest": "^0.1.11",
+    "grunt-noflo-browser": "^0.1.11"
   },
   "scripts": {
     "test": "grunt test"
