--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "noflo": "1.0.0",
+    "noflo": "^1.0.0",
     "underscore": "~1.8.3",
     "owl-deepcopy": "~0.0.2"
   },
